--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"emoji",
 		"picker"
 	],
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"license": "MIT",
 	"main": "dist/index.js",
 	"typings": "dist/index.d.ts",
@@ -98,13 +98,15 @@
 		"rollup-plugin-typescript2": "^0.31.2",
 		"tslib": "^2.4.0",
 		"typescript": "^4.6.3",
-		"webpack": "4.0.0",
-		"@popperjs/core": "^2.11.5",
-		"react-popper": "^2.2.5",
-		"styled-components": "^5.3.5"
+		"webpack": "4.0.0"
 	},
 	"peerDependencies": {
 		"react": ">=16.8.0",
 		"react-dom": ">=16.8.0"
+	},
+	"dependencies": {
+		"@popperjs/core": "^2.11.5",
+		"react-popper": "^2.2.5",
+		"styled-components": "^5.3.5"
 	}
 }
